--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 
 <body>
     <h1>This is heading</h1>
-    <p>This is para</p>
+    <p>This is paragraph</p>
+    <p>This is another paragraph</p>
 </body>
 
 </html>
