--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <h1>This is heading</h1>
     <p>This is paragraph</p>
     <p>This is another paragraph</p>
+    <p>This is third paragraph</p>
+    <p>this is another para</p>
 </body>
 
 </html>
